--- a/SpotifyOpgaveCore/SpotifyOpgaveCore.csproj
+++ b/SpotifyOpgaveCore/SpotifyOpgaveCore.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="AspNet.Security.OAuth.Spotify" Version="2.0.0" />
     <PackageReference Include="bootstrap" Version="4.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.HttpsPolicy" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
