--- a/SpotifyOpgaveCore/SpotifyOpgaveCore.csproj
+++ b/SpotifyOpgaveCore/SpotifyOpgaveCore.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="AspNet.Security.OAuth.Spotify" Version="2.0.0" />
     <PackageReference Include="bootstrap" Version="4.1.3" />
+    <PackageReference Include="IdentityModel" Version="3.10.5" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.HttpsPolicy" Version="2.2.0" />
